// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`/api/calls GET / / - get chats 1`] = `
Object {
  "entities": Object {
    "calls": Object {
      "asdsads": Object {
        "accountId": "62954241-3652-4792-bae5-5bfed53d37b7",
        "answered": true,
        "callSource": "direct",
        "callerCity": null,
        "callerCountry": null,
        "callerName": null,
        "callerNum": null,
        "callerState": null,
        "callerZip": null,
        "campaign": null,
        "dateTime": null,
        "destinationNum": "+16041234567",
        "direction": null,
        "duration": null,
        "id": "asdsads",
        "patientId": null,
        "priorCalls": null,
        "recording": null,
        "recordingDuration": null,
        "startTime": "2017-08-10T22:54:00.569Z",
        "totalCalls": null,
        "trackingNum": null,
        "voicemail": null,
        "wasApptBooked": true,
      },
    },
  },
  "result": Array [
    "asdsads",
  ],
}
`;

exports[`/api/calls GET / / - get chats stats 1`] = `
Object {
  "booked": 1,
  "entities": Object {},
  "pickup": 1,
  "total": 1,
  "webBooked": 1,
  "webPickup": 1,
  "webTotal": 1,
}
`;

exports[`/api/calls GET / / - get graph stats 1`] = `
Object {
  "entities": Object {},
  "xValues": Array [
    "Jul 09",
    "Jul 10",
    "Jul 11",
    "Jul 12",
    "Jul 13",
    "Jul 14",
    "Jul 15",
    "Jul 16",
    "Jul 17",
    "Jul 18",
    "Jul 19",
    "Jul 20",
    "Jul 21",
    "Jul 22",
    "Jul 23",
    "Jul 24",
    "Jul 25",
    "Jul 26",
    "Jul 27",
    "Jul 28",
    "Jul 29",
    "Jul 30",
    "Jul 31",
    "Aug 01",
    "Aug 02",
    "Aug 03",
    "Aug 04",
    "Aug 05",
    "Aug 06",
    "Aug 07",
    "Aug 08",
    "Aug 09",
    "Aug 10",
    "Aug 11",
    "Aug 12",
    "Aug 13",
    "Aug 14",
  ],
  "yValues": Array [
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    1,
    0,
    0,
    0,
    0,
  ],
}
`;

exports[`/api/calls PUT / / - put chats 1`] = `
Object {
  "entities": Object {
    "calls": Object {
      "asdsads": Object {
        "accountId": "62954241-3652-4792-bae5-5bfed53d37b7",
        "answered": true,
        "callSource": "direct",
        "callerCity": null,
        "callerCountry": null,
        "callerName": null,
        "callerNum": null,
        "callerState": null,
        "callerZip": null,
        "campaign": null,
        "dateTime": null,
        "destinationNum": "+16041234567",
        "direction": null,
        "duration": null,
        "id": "asdsads",
        "patientId": null,
        "priorCalls": null,
        "recording": null,
        "recordingDuration": null,
        "startTime": "2017-08-10T22:54:00.569Z",
        "totalCalls": null,
        "trackingNum": null,
        "voicemail": null,
        "wasApptBooked": false,
      },
    },
  },
  "result": "asdsads",
}
`;
